--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1121,7 +1121,7 @@ pre code {
 .post-card .post-card-body .post-card-title {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 18px;
   color: #fff;
   margin: 0 0 10px;
