--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -952,7 +952,7 @@ pre code {
   display: block;
   padding: 15px 0;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 400;
   font-size: 18px;
   color: #311e3e;
@@ -1134,7 +1134,7 @@ pre code {
 .post-card .post-card-body .tag {
   text-decoration: none;
   font-size: 10px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: #fff;
 }
 
@@ -1157,7 +1157,7 @@ pre code {
 
 .pagination .previous, .pagination .next {
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 14px;
   color: #3e3e40;
 }
@@ -1224,7 +1224,7 @@ pre code {
 .header-page .page-date {
   text-align: center;
   font-size: 14px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 300;
 }
 
@@ -1237,7 +1237,7 @@ pre code {
 
 .page-footer .page-tag,
 .page-footer .page-share {
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 12px;
   color: #311e3e;
 }
