--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1184,7 +1184,7 @@ pre code {
   position: relative;
   padding: 0;
   margin: 0;
-  height: 500px;
+  /* height: 500px; */
   background-color: #fff;
   overflow: hidden;
 }
