--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1180,14 +1180,14 @@ pre code {
 }
 
 /* = = = = = = = = = = Post-Page Styles = = = = = = = = = = */
-.page-image {
+/*.page-image {
   position: relative;
   padding: 0;
   margin: 0;
   height: 50px;
   background-color: #fff;
   overflow: hidden;
-}
+}*/
 
 /* .page-image .cover-image {
   height: 0%;
