--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,12 @@
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
           <li><a href="{{site.baseurl}}/">Home</a></li>
-          <li><a href="{{site.baseurl}}/">Machine Learning</a></li>
-          <li><a href="{{site.baseurl}}/">Deep Learning</a></li>
-          <li><a href="{{site.baseurl}}/">Statistics</a></li>
-          <li><a href="{{site.baseurl}}/">Linear Algebra</a></li>
-          <li><a href="{{site.baseurl}}/">Optimization</a></li>
-          <li><a href="{{site.baseurl}}/">Computer Science</a></li>
+          <li><a href="{{site.baseurl}}/MachineLearning">Machine Learning</a></li>
+          <li><a href="{{site.baseurl}}/DeepLearning">Deep Learning</a></li>
+          <li><a href="{{site.baseurl}}/Statistics">Statistics</a></li>
+          <li><a href="{{site.baseurl}}/LinearAlgebra">Linear Algebra</a></li>
+          <li><a href="{{site.baseurl}}/Optimization">Optimization</a></li>
+          <li><a href="{{site.baseurl}}/ComputerScience">Computer Science</a></li>
           <li><a href="{{site.baseurl}}/about">About</a></li>
         </ul>
       </nav>
