--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
           <li><a href="{{site.baseurl}}/">Home</a></li>
-          <li><a href="{{site.baseurl}}/Machine-Learning">Machine Learning</a></li>
+          <li><a href="{{site.baseurl}}/machine_learning_tags">Machine Learning</a></li>
           <li><a href="{{site.baseurl}}/Deep-Learning">Deep Learning</a></li>
           <li><a href="{{site.baseurl}}/Statistics">Statistics</a></li>
           <li><a href="{{site.baseurl}}/Linear-Algebra">Linear Algebra</a></li>
