--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,12 @@
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
           <li><a href="{{site.baseurl}}/">Home</a></li>
-          <li><a href="{{site.baseurl}}/Machine-Learning">Machine Learning</a></li>
-          <li><a href="{{site.baseurl}}/Deep-Learning">Deep Learning</a></li>
-          <li><a href="{{site.baseurl}}/Statistics">Statistics</a></li>
-          <li><a href="{{site.baseurl}}/Linear-Algebra">Linear Algebra</a></li>
-          <li><a href="{{site.baseurl}}/Optimization">Optimization</a></li>
-          <li><a href="{{site.baseurl}}/Computer-Science">Computer Science</a></li>
+          <li><a href="{{site.baseurl}}/Machine-Learning-tags.html">Machine Learning</a></li>
+          <li><a href="{{site.baseurl}}/Deep-Learning-tags.html">Deep Learning</a></li>
+          <li><a href="{{site.baseurl}}/Statistics-tags.html">Statistics</a></li>
+          <li><a href="{{site.baseurl}}/Linear-Algebra-tags.html">Linear Algebra</a></li>
+          <li><a href="{{site.baseurl}}/Optimization-tags.html">Optimization</a></li>
+          <li><a href="{{site.baseurl}}/Computer-Science-tags.html">Computer Science</a></li>
           <li><a href="{{site.baseurl}}/about">About</a></li>
         </ul>
       </nav>
