--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
           <li><a href="{{site.baseurl}}/">Home</a></li>
-          <li><a href="{{site.baseurl}}/Machine-Learning-tags">Graph-based Semi-Supervised Learning</a></li>
+          <li><a href="{{site.baseurl}}/Graph-based-Semi-Supervised-Learning-tags">Graph-based Semi-Supervised Learning</a></li>
           <li><a href="{{site.baseurl}}/Machine-Learning-tags">Machine Learning</a></li>
           <li><a href="{{site.baseurl}}/Deep-Learning-tags">Deep Learning</a></li>
           <li><a href="{{site.baseurl}}/Statistics-tags">Statistics</a></li>
