--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,9 @@ layout: default
 <div class="flex-container">
   {% include header.html %}
   <article class="article-page">
+    <script type="text/javascript" async
+            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
     <div class="page-image">
       <div class="cover-image" style="background: url({{"/assets/img/" | prepend: site.baseurl | append : page.img}}) center no-repeat; background-size: cover;"></div>
     </div>
