--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1761,3 +1761,10 @@ pre code {
     margin: 0 0 15px;
   }
 }
+
+
+
+
+img.alignleft{float:left}
+img.alignright{float:right}
+img.aligncenter{display:block;margin:0 auto}
